# Loki_on_Kali

./: Parrot os  README.md  loki_0.2.7-1_amd64.deb  loki_0.2.7-2_amd64.deb  loki_0.3.0-r502-1_amd64.deb  loki_0.3.0-r502-2_amd64.deb  loki_0.3.0-r502-3_amd64.deb  loki_0.3.0-r502-4_amd64.deb  loki_0.3.0-r502-5_amd64.deb  loki_0.3.0-r502-6_amd64.deb
AllSrc/: AUTHORS  COPYING  INSTALL  LICENSE  Makefile.am  REQUIREMENTS  configure.ac  loki.spec  setup-win32_exe.py  setup-win32_lib.py  setup.py.in
AllSrc/debian/: README.source  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  init.d.lsb.ex  loki.default.ex  loki.doc-base.EX  loki.postinst.debhelper  loki.prerm.debhelper  loki.substvars  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
AllSrc/include/: algos.h  bf.h  mplsred.h  mplstun.h  pppoetun.h
AllSrc/include/algos/: hmac_md5.h  hmac_sha2.h  md5.h  sha1.h  sha2.h
AllSrc/include/bf/: bfd.h  isis.h  ospf.h  tacacs.h  tcpmd5.h
AllSrc/lib/: Makefile.am  bf.c  mplsred.c  mplstun.c  pppoetun.c
AllSrc/lib/algos/: hmac_md5.c  hmac_sha2.c  md5.c  sha1.c  sha2.c
AllSrc/lib/asleap/: Makefile.am  asleap.c  common.c  sha1.c  utils.c
AllSrc/lib/bf/: bfd.c  isis.c  ospf.c  tacacs.c  tcpmd5.c
AllSrc/loki_bindings/: asleap.c  bf.pyx  mplsred.c  mplstun.c  tcpmd5.c  test_bf.py
AllSrc/misc/libdnet/: libdnet-1.11-iptables.diff  libdnet-1.11-py26.diff  libdnet-1.11-r2.ebuild
AllSrc/modules/: Makefile.am  module_802_1X.glade  module_802_1X.py  module_arp.glade  module_arp.py  module_bfd.py  module_bgp.glade  module_bgp.py  module_dot1q.py  module_dtp.py  module_eigrp.py  module_glbp.py  module_hsrp.glade  module_hsrp.py  module_hsrp2.glade  module_hsrp2.py  module_icmp6.py  module_isis.glade  module_isis.py  module_mpls.py  module_ospf.glade  module_ospf.py  module_rip.py  module_snmp.glade  module_snmp.py  module_tacacs_plus.py  module_tcp-md5.py  module_test.py  module_vrrp.py  module_vrrp3.py  module_wlccp.glade  module_wlccp.py  update_macs.sh
AllSrc/pkg_scripts/: PKGBUILD  build_loki-deb  build_loki-rpm  build_loki.ps1  create_srctar-loki  inno_setup.iss  loki_gtk.exe.manifest
AllSrc/src/: Makefile.am  bf_test.c  loki.py  loki_gtk.py  loki_urw.py  mpls-tunnel.c  pppoe-tunnel.c
Docker/: Dockerfile  build.sh  run_by_dockerfile.sh  run_loki_bash.sh  run_loki_gtk.sh  run_loki_urw.sh
Files/DEBIAN/: control  md5sums  postinst  prerm
Files/usr/local/lib/python2.7/dist-packages/: loki-0.3.0.egg-info  loki.py  loki_bindings-0.3.0.egg-info
Files/usr/share/doc/loki/: README.Debian
Files/usr/share/loki/modules/: mac.txt  module_arp.py  module_bfd.glade  module_bfd.py  module_bgp.py  module_dot1q.glade  module_dtp.glade  module_dtp.py  module_eigrp.glade  module_glbp.py  module_hsrp.glade  module_hsrp.py  module_hsrp2.py  module_icmp6.glade  module_icmp6.py  module_ldp.glade  module_ldp.py  module_mpls.py  module_ospf.glade  module_ospf.py  module_rip.glade  module_tacacs_plus.py  module_tcp-md5.glade  module_tcp-md5.py  module_vrrp.py  module_wlccp.py  network_config.glade
Files/usr/share/pyshared/: loki_bindings-0.2.egg-info
Files/usr/share/pyshared/loki_bindings/: __init__.py
Files/usr/share/pyshared/loki_bindings/asleap/: __init__.py
Files/usr/share/pyshared/loki_bindings/mpls/: __init__.py
Files/usr/share/pyshared/loki_bindings/ospfmd5/: __init__.py
Files/usr/share/pyshared/loki_bindings/tcpmd5/: __init__.py
Files/usr/share/python-support/: loki.private  loki.public
Local_Packages/: install.sh  libdumbnet1_1.12-9_amd64.deb  libglade2-0_1%3a2.6.4-2+b1_amd64.deb  list_of_ordered_packages.txt  python-glade2_2.24.0-6_amd64.deb  python-gtk2_2.24.0-6_amd64.deb  python-urwid_2.0.1-2+b2_amd64.deb
Needed_Old_Packages/: libssl1.0.0_1.0.2l-1~bpo8+1_amd64.deb  python-dumbnet_1.12-8_amd64.deb  python-ipy_0.83-1_all.deb  python-support_1.0.15_all.deb
Needed_Packages_For_kali-linux-2018.3-amd64/: multiarch-support_2.27-6_amd64.deb  python-dpkt_1.8.r98-1_all.deb  python-glade2_2.24.0-5.1+b1_amd64.deb
